--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
+  "scripts": {
+    "start": "node app.js",
+    "start:dev": "nodemon app.js",
+    "test": "mocha test --exit"
+  },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.3",
+    "supertest": "^6.3.4"
   }
 }
