--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test": "mocha test --exit"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
